Master: added new images, modified content, changed css on logo

--- a/etherealize/index.html
+++ b/etherealize/index.html
@@ -29,7 +29,7 @@
     <div class="fullscreen-container">
       <div class="fullscreenbanner">
         <ul>
-          <li data-transition="slidevertical" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/sliderbg-1.jpg"  alt="slider image" data-lazyload="images/resource/sliderbg-1.jpg">
+          <li data-transition="slidevertical" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/bg-1.jpg"  alt="slider image" data-lazyload="images/resource/bg-1.jpg">
             <div class="tp-caption very_large_text wraping sft"
                     data-x="center"
                     data-y="center"
@@ -37,7 +37,7 @@
                     data-voffset="-100"
                     data-speed="300"
                     data-start="1000"
-                    data-easing="easeOutExpo"  ><span class="color-primary">ETHEREALIZE</span></div>
+                    data-easing="easeOutExpo"  ><span class="logo-primary-light">ETHEREALIZE</span></div>
             <div class="tp-caption large_text sfb"
                       data-x="center"
                       data-y="center"
@@ -87,7 +87,7 @@
                       data-start="2000"
                       data-easing="easeOutExpo">SMART CONTRACT CONSULTING</div>
           </li>
-          <li data-transition="slidehorizontal" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/sliderbg-2.jpg"  alt="slider image" data-lazyload="images/resource/sliderbg-2.jpg">
+          <li data-transition="slidehorizontal" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/bg-2.jpeg"  alt="slider image" data-lazyload="images/resource/bg-2.jpeg">
             <div class="tp-caption very_large_text sft"
                     data-x="center"
                     data-y="center"
@@ -95,7 +95,123 @@
                     data-voffset="-80"
                     data-speed="300"
                     data-start="1000"
-                    data-easing="easeOutExpo"  ><span class="color-primary">ETHEREALIZE</span></div>
+                    data-easing="easeOutExpo"  ><span class="logo-primary-light">ETHEREALIZE</span></div>
+            <div class="tp-caption large_text sfb"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="0"
+                      data-voffset="0"
+                      data-speed="600"
+                      data-start="1500"
+                      data-easing="easeOutExpo"  >ETHEREUM BUSINESS DEVELOPMENT</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-250"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1600"
+                      data-easing="easeOutExpo">BLOCKCHAIN SOLUTIONS</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-135"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1700"
+                      data-easing="easeOutExpo">/</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-30"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1800"
+                      data-easing="easeOutExpo">DAPP DEVELOPMENTS</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="75"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1900"
+                      data-easing="easeOutExpo">/</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="220"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="2000"
+                      data-easing="easeOutExpo">SMART CONTRACT CONSULTING</div>
+          </li>
+          <li data-transition="slidehorizontal" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/bg-3.jpg"  alt="slider image" data-lazyload="images/resource/bg-3.jpg">
+            <div class="tp-caption very_large_text sft"
+                    data-x="center"
+                    data-y="center"
+                    data-hoffset="0"
+                    data-voffset="-80"
+                    data-speed="300"
+                    data-start="1000"
+                    data-easing="easeOutExpo"  ><span class="logo-primary-light">ETHEREALIZE</span></div>
+            <div class="tp-caption large_text sfb"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="0"
+                      data-voffset="0"
+                      data-speed="600"
+                      data-start="1500"
+                      data-easing="easeOutExpo"  >ETHEREUM BUSINESS DEVELOPMENT</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-250"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1600"
+                      data-easing="easeOutExpo">BLOCKCHAIN SOLUTIONS</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-135"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1700"
+                      data-easing="easeOutExpo">/</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="-30"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1800"
+                      data-easing="easeOutExpo">DAPP DEVELOPMENTS</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="75"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="1900"
+                      data-easing="easeOutExpo">/</div>
+            <div class="tp-caption small_text sfl"
+                      data-x="center"
+                      data-y="center"
+                      data-hoffset="220"
+                      data-voffset="50"
+                      data-speed="600"
+                      data-start="2000"
+                      data-easing="easeOutExpo">SMART CONTRACT CONSULTING</div>
+          </li>
+          <li data-transition="slidehorizontal" data-slotamount="7" data-masterspeed="300" > <img src="images/resource/bg-4.png"  alt="slider image" data-lazyload="images/resource/bg-4.png">
+            <div class="tp-caption very_large_text sft"
+                    data-x="center"
+                    data-y="center"
+                    data-hoffset="0"
+                    data-voffset="-80"
+                    data-speed="300"
+                    data-start="1000"
+                    data-easing="easeOutExpo"  ><span class="logo-primary-light">ETHEREALIZE</span></div>
             <div class="tp-caption large_text sfb"
                       data-x="center"
                       data-y="center"
@@ -176,7 +292,7 @@
       <div class="container">
         <header class="heading animated out" data-animation="fadeInUp" data-delay="0">
           <h2>About <strong>Us</strong></h2>
-          <p>Etherealize is an Australian based IT Company Developing Ethereum Distributed BlockChain Applications.</p>
+          <p>Etherealize is a Software Engineering Company based in Melbourne, Australia, developing Ethereum Distributed Blockchain Applications.</p>
         </header>
       </div>
     </div>
@@ -188,33 +304,33 @@
               <div class="about-box">
                 <div class="iconic"> <i class="icon-user2"></i> </div>
                 <h4>Who We Are</h4>
-                <p>We love coding and cooking up new ideas for people to interactive with on the BlockChain.</p>
+                <p>We are a group of passionate engineers that love developing and implementing ideas that interact with Blockchain technology. Blockchain is a revoluntionary technology that can benefit every industry. It is our goal to help clients achieve exposure.</p>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInLeft" data-delay="0">
               <div class="about-box">
                 <div class="iconic"> <i class="icon-target"></i> </div>
                 <h4>We Aim High</h4>
-                <p>Why start something if you not going to deliver a Quality Outcome. We aim to provide Valuable Outcomes.</p>
+                <p>We hold ourselves to the highest standard of code resulting in quality outcomes. Our use of leading edge development tools and access to experienced consultants keep us capable of hitting our targets.</p>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInRight" data-delay="0">
               <div class="about-box">
                 <div class="iconic"> <i class="icon-cog"></i> </div>
                 <h4>What We Do</h4>
-                <p>Ethereum BlockChain Development including Application/Web View and AWS Cloud Server/Database Solutions.</p>
+                <p>Ethereum Blockchain SmartContract Development including Backend API's, Application/Web View and AWS Cloud Server/Database Solutions.</p>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInLeft" data-delay="0">
               <div class="about-box">
                 <div class="iconic"> <i class="icon-question"></i> </div>
                 <h4>We Love To Help</h4>
-                <p>Consulting is out bread & butter. Let us know if you have an Ethereum Project needing Attention.</p>
+                <p>Consulting is out bread & butter. Let us know if you have an Ethereum Project needing attention. Contact us in the fields below or call to enquire.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="image-hold text-center animated out" data-animation="fadeInUpBig" data-delay="0"> <img src="images/resource/phone.png" alt="phone"> </div>
+        <div class="image-hold text-center animated out" data-animation="fadeInUpBig" data-delay="0"> <img src="images/resource/i-phone.png" alt="phone"> </div>
       </div>
     </div>
   </article>
@@ -788,7 +904,7 @@
   </article>
   <div class="site-btm">
     <div class="container">
-      <p>2014 © <strong>ETHER</strong>. All rights reserved.</p>
+      <p>2017 © <strong>ETHEREALIZE</strong>. All rights reserved.</p>
     </div>
   </div>
 </div>
