master: content updated - 50% done

--- a/etherealize/index.html
+++ b/etherealize/index.html
@@ -344,9 +344,10 @@
         </header>
         <ul class="filter-tabs">
           <li class="filter active" data-role="button" data-filter="all">All</li>
-          <li class="filter" data-role="button" data-filter="design">Design</li>
-          <li class="filter" data-role="button" data-filter="commerce">Commerce</li>
-          <li class="filter" data-role="button" data-filter="photography">Photography</li>
+          <li class="filter" data-role="button" data-filter="blockchain">Blockchain</li>
+          <li class="filter" data-role="button" data-filter="smart-contracts">Smart Contracts</li>
+          <li class="filter" data-role="button" data-filter="backend">Backend</li>
+          <li class="filter" data-role="button" data-filter="frontend">Frontend</li>
         </ul>
       </div>
     </div>
@@ -363,7 +364,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all photography grid-4">
+          <li class="mix all blockchain grid-4">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-2.jpg" alt="showcase">
                 <figcaption>
@@ -373,7 +374,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all design grid-4">
+          <li class="mix all smart-contracts grid-4">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-3.jpg" alt="showcase">
                 <figcaption>
@@ -383,7 +384,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all commerce grid-4">
+          <li class="mix all backend grid-4">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-4.jpg" alt="showcase">
                 <figcaption>
@@ -393,7 +394,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all photography grid-3">
+          <li class="mix all frontend grid-3">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-5.jpg" alt="showcase">
                 <figcaption>
@@ -403,7 +404,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all commerce grid-3">
+          <li class="mix all frontend grid-3">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-6.jpg" alt="showcase">
                 <figcaption>
@@ -413,7 +414,7 @@
               </figure>
             </div>
           </li>
-          <li class="mix all commerce photography grid-3">
+          <li class="mix all frontend photography grid-3">
             <div class="portfolio-box">
               <figure class="image-hover"><img src="images/resource/portfolio-7.jpg" alt="showcase">
                 <figcaption>
@@ -434,7 +435,9 @@
       <div class="container">
         <header class="heading animated out" data-animation="fadeInUp" data-delay="0">
           <h2>Our <strong>Services</strong></h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+          <p>We provide consultation and implementation services for end to end blockchain solutions.</p>
+          <p>An end to end solution consists of a blockchain node, a remote procedure backend API, 
+            back end application logic, database and front end user facing application.</p>
         </header>
       </div>
     </div>
@@ -446,93 +449,93 @@
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="0">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-desktop"></i></div>
-                <h4><a href="#">RESPONSIVE DESIGN</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">CHAIN NODE</a></h4>
+                <p>We deploy a node that connects with the target blockchain (eg. Ethereum) to form a bridge into the world of Smart Contracs.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="200">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-camera"></i></div>
-                <h4><a href="#">PHOTOGRAPHY</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">SMART CONTRACTS</a></a></h4>
+                <p>We develop, test, audit and deploy smart contracts onto the blockchain. These smart contracts are immutable (unable to be tampered with) and can execute transfers of assets autonomously.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="400">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-user"></i></div>
-                <h4><a href="#">CLIENT SUPPORT</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">APP BACKEND</a></h4>
+                <p>We develop the core logic of your application to serve as the middle man between the blockchain and your user front end. Remote procedure call API's are issued here.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="600">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-lightbulb-o"></i></div>
-                <h4><a href="#">CREATIVE IDEAS</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">APP FRONTEND</a></h4>
+                <p>We develop user facing web and native phone applications that communicate with the backend logic.</p>
               </div>
             </div>
-            <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="0">
+            <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="0" style="clear:both;">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-th-large"></i></div>
-                <h4><a href="#">MULTI PURPOSE</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">CLIENT SUPPORT</a></h4>
+                <p>We offer ongoing support for all of our clients. We understand the nature of the industry shifts dynamically so our support is offered to ease your transition.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="200">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-comment-o"></i></div>
                 <h4><a href="#">CONSULTING</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <p>With years of combined experience in blockchain technology, you can seek our advice and consultation on matters regarding existing blockchain integration or proposed integrations.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="400">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-gears"></i></div>
                 <h4><a href="#">DEVELOPMENT</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <p>We rapidly develop solutions in sprints. Using an agile methodology of project management. We can adapt to scope pivot.</p>
               </div>
             </div>
             <div class="col-sm-3 animated out" data-animation="flipInX" data-delay="600">
               <div class="service-box text-center">
                 <div class="iconic"><i class="icon-edit"></i></div>
-                <h4><a href="#">WEB DESIGN</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+                <h4><a href="#">SCALING</a></h4>
+                <p>We implement elastic solutions that are scalable. Infrastructure that supports your application must be capable of responding dynamically to demand.</p>
               </div>
             </div>
           </div>
         </div>
-        
+        <h2>Level of <strong>Complexity</strong></h2>
         <!-- progress-bars -->
         <div class="progress-bars">
           <div class="row">
             <div class="col-sm-6">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"> <span>Smart Contracts</span><em></em> </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"> <span>Photoshop</span><em></em> </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"> <span>Blockchain Node</span><em></em> </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"> <span>After Effects</span><em></em> </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"> <span>Backend RPC</span><em></em> </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"> <span>Illustrator</span><em></em> </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"> <span>Backend</span><em></em> </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"> <span>Premiere Pro</span><em></em> </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"> <span>Frontend RPC calls</span><em></em> </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"> <span>Photography</span><em></em> </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"> <span>Dreamweaver</span><em></em> </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"> <span>Frontend</span><em></em> </div>
               </div>
             </div>
           </div>
@@ -557,17 +560,17 @@
             <div class="row">
               <div class="col-sm-3 animated out" data-animation="bounceIn" data-delay="0">
                 <div class="stat-box text-center">
-                  <figure class="image"> <img src="images/resource/img-1.jpg" alt="image">
+                  <!-- <figure class="image"> <img src="images/resource/img-1.jpg" alt="image"> -->
                     <figcaption>
                       <div class="iconic"><i class="icon-brush"></i></div>
-                      <div class="h4"><a href="#">DESIGNS CRAFTED</a></div>
+                      <div class="h4"><a href="#">PROJECTS CONSULTING</a></div>
                     </figcaption>
                   </figure>
-                  <div class="detail"> 3735 </div>
+                  <div class="detail"> 3 </div>
                   <div class="stat-hover">
                     <div class="iconic"><i class="icon-brush"></i></div>
-                    <div class="h4"><a href="#">DESIGNS CRAFTED</a></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+                    <div class="h4"><a href="#">PROJECTS CONSULTING</a></div>
+                    <p>We are consulting 3 projects. One in the real estate market, another in fund management and finl</p>
                   </div>
                 </div>
               </div>
