--- a/etherealize/index.html
+++ b/etherealize/index.html
@@ -643,13 +643,16 @@
       <div class="container">
         <div class="blog-area">
           <div class="row">
+            <div class="col-sm-2">
+
+            </div>
             <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="0">
               <div class="blog-box">
                 <figure class="image"> <img src="images/resource/img-4.jpg" alt="image"> </figure>
                 <div class="detail">
-                  <h4>BLOG <strong>POST 1</strong></h4>
-                  <p class="meta">Posted by <a href="#">Ether</a> - 3 hours ago</p>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</p>
+                  <h4>Popular Query: <strong>How to buy Ether</strong></h4>
+                  <p class="meta">Posted by <a href="#">Marty</a> - 8th Dec 2017</p>
+                  <p>Cryptocurrencies such as Ether are experiencing a boom of popularity. The curve of adoption has become exponential. A popular query amongst most have been "How do I buy ether?". This post will walk Australian's through the process..</p>
                   <a href="blog-popup-1.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
               </div>
             </div>
@@ -657,13 +660,13 @@
               <div class="blog-box">
                 <figure class="image"> <img src="images/resource/img-5.jpg" alt="image"> </figure>
                 <div class="detail">
-                  <h4>BLOG <strong>POST 2</strong></h4>
-                  <p class="meta">Posted by <a href="#">Ether</a> - 3 hours ago</p>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</p>
+                  <h4>Welcome to <strong>Etherealize</strong></h4>
+                  <p class="meta">Posted by <a href="#">Marty</a> - 5th Dec 2017</p>
+                  <p>Etherealize is co founded by two software engineers </p>
                   <a href="blog-popup-1.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
               </div>
             </div>
-            <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="400">
+            <!-- <div class="col-sm-4 animated out" data-animation="fadeInUp" data-delay="400">
               <div class="blog-box">
                 <figure class="image"> <img src="images/resource/img-6.jpg" alt="image"> </figure>
                 <div class="detail">
@@ -672,7 +675,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</p>
                   <a href="blog-popup-1.html" class="btn btn-gray btn-block blog-popup">READ MORE <i class="icon-external-link"></i></a> </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -693,12 +696,14 @@
       <div class="container">
         <div class="team-area">
           <div class="row">
+            <div class="col-sm-3">
+            </div>
             <div class="col-sm-3 animated out" data-animation="fadeInUp" data-delay="0">
               <div class="team-box">
                 <figure class="image"> <img src="images/resource/team-1.jpg" alt="image"> </figure>
                 <div class="detail">
-                  <h4><a href="#">REISS SOMERS</a></h4>
-                  <p class="designation">Founder</p>
+                  <h4><a href="#">Adam Adair</a></h4>
+                  <p class="designation">Software Engineer and Co-founder</p>
                   <ul class="social-links">
                     <li><a href="#" class="icon-facebook-square"></a></li>
                     <li><a href="#" class="icon-twitter-square"></a></li>
@@ -712,38 +717,8 @@
               <div class="team-box">
                 <figure class="image"> <img src="images/resource/team-2.jpg" alt="image"> </figure>
                 <div class="detail">
-                  <h4><a href="#">JOSH SOMERS</a></h4>
-                  <p class="designation">Designer</p>
-                  <ul class="social-links">
-                    <li><a href="#" class="icon-facebook-square"></a></li>
-                    <li><a href="#" class="icon-twitter-square"></a></li>
-                    <li><a href="#" class="icon-google-plus-square"></a></li>
-                    <li><a href="#" class="icon-pinterest-square"></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3 animated out" data-animation="fadeInUp" data-delay="400">
-              <div class="team-box">
-                <figure class="image"> <img src="images/resource/team-3.jpg" alt="image"> </figure>
-                <div class="detail">
-                  <h4><a href="#">CHRIS DOE</a></h4>
-                  <p class="designation">Developer</p>
-                  <ul class="social-links">
-                    <li><a href="#" class="icon-facebook-square"></a></li>
-                    <li><a href="#" class="icon-twitter-square"></a></li>
-                    <li><a href="#" class="icon-google-plus-square"></a></li>
-                    <li><a href="#" class="icon-pinterest-square"></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3 animated out" data-animation="fadeInUp" data-delay="600">
-              <div class="team-box">
-                <figure class="image"> <img src="images/resource/team-4.jpg" alt="image"> </figure>
-                <div class="detail">
-                  <h4><a href="#">HENRY DOE</a></h4>
-                  <p class="designation">SEO Specialist</p>
+                  <h4><a href="#">Marty Kieliszek</a></h4>
+                  <p class="designation">Software Engineer and Co-founder</p>
                   <ul class="social-links">
                     <li><a href="#" class="icon-facebook-square"></a></li>
                     <li><a href="#" class="icon-twitter-square"></a></li>
@@ -764,7 +739,7 @@
     <div class="heading-upper">
       <div class="container">
         <header class="heading animated out" data-animation="fadeInUp" data-delay="0">
-          <h2>Pricing <strong>Tables</strong></h2>
+          <h2>Our <strong>Packages</strong></h2>
         </header>
       </div>
     </div>
@@ -777,46 +752,47 @@
             <div class="col-sm-6 animated out" data-animation="fadeInLeft" data-delay="0">
               <div class="pricing-table">
                 <div class="pricing-detail">
-                  <h4><span class="color-primary">Regular</span> Plan</h4>
+                  <h4><span class="color-primary">Blockchain</span> Integration Plan</h4>
                   <ul class="pricing-list">
-                    <li>Item 1 consectetuer adipiscing elit, sed diam</li>
-                    <li>Item 2 consectetuer adipiscing elit</li>
-                    <li>Item 3 consectetuer adipiscing</li>
-                    <li>Item 4 consectetuer adipiscing with extras</li>
+                    <li>Set-up a node that connects to the target blockchain</li>
+                    <li>Set-up a backend RPC API to communicate with node</li>
+                    <li>Set-up on enterprise infrastructure or cloud</li>
+                    <li>Ethereum blockchain preference. Other blockchains supported </li>
                   </ul>
-                  <div class="price-amount"> <small>Starts From</small> $100 </div>
+                  <!-- <div class="price-amount"> <small>Starts From</small> $100 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Purchase Regular Plan</a> </div>
+                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInRight" data-delay="200">
               <div class="pricing-table">
                 <div class="pricing-detail">
-                  <h4><span class="color-primary">Advanced</span> Plan</h4>
+                  <h4><span class="color-primary">Backend</span> Integration Plan</h4>
                   <ul class="pricing-list">
-                    <li>Item 1 consectetuer adipiscing elit, sed diam</li>
-                    <li>Item 2 consectetuer adipiscing elit</li>
-                    <li>Item 3 consectetuer adipiscing</li>
-                    <li>Item 4 consectetuer adipiscing with extras</li>
+                    <li>Set-up and develop core backend logic that can interface with your system</li>
+                    <li>Set-up and develop core backend logic that interfaces to the blockchain</li>
+                    <li>Incorporate a centralised database if required</li>
+                    <li>Set-up authentication and authorization for back end API calls</li>
                   </ul>
-                  <div class="price-amount"> <small>Starts From</small> $250 </div>
+                  <!-- <div class="price-amount"> <small>Starts From</small> $250 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Purchase Advanced Plan</a> </div>
+                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInLeft" data-delay="0">
               <div class="pricing-table">
                 <div class="pricing-detail">
-                  <h4><span class="color-primary">Business</span> Plan</h4>
+                  <h4><span class="color-primary">Custom</span> Plan</h4>
                   <ul class="pricing-list">
-                    <li>Item 1 consectetuer adipiscing elit, sed diam</li>
-                    <li>Item 2 consectetuer adipiscing elit</li>
-                    <li>Item 3 consectetuer adipiscing</li>
-                    <li>Item 4 consectetuer adipiscing with extras</li>
+                    <li>Blockchain node integration, and or</li>
+                    <li>Backend logic integration, and or</li>
+                    <li>Front end application development, and or</li>
+                    <li>RPC API integration and development, and or</li>
+                    <li>Database design, implementation and integration</li>
                   </ul>
-                  <div class="price-amount"> <small>Starts From</small> $500 </div>
+                  <!-- <div class="price-amount"> <small>Starts From</small> $500 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Purchase Business Plan</a> </div>
+                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
               </div>
             </div>
             <div class="col-sm-6 animated out" data-animation="fadeInRight" data-delay="200">
@@ -824,14 +800,15 @@
                 <div class="pricing-detail">
                   <h4><span class="color-primary">Ultimate</span> Plan</h4>
                   <ul class="pricing-list">
-                    <li>Item 1 consectetuer adipiscing elit, sed diam</li>
-                    <li>Item 2 consectetuer adipiscing elit</li>
-                    <li>Item 3 consectetuer adipiscing</li>
-                    <li>Item 4 consectetuer adipiscing with extras</li>
+                    <li>Solution architecture and design</li>
+                    <li>Full end to end development</li>
+                    <li>Full ongoing support and updates</li>
+                    <li>Infrastructure management with option for scaling</li>
+                    <li>Workshop and handover</li>
                   </ul>
-                  <div class="price-amount"> <small>Starts From</small> $750 </div>
+                  <!-- <div class="price-amount"> <small>Starts From</small> $750 </div> -->
                 </div>
-                <div class="price-btm"> <a href="#">Purchase Ultimate Plan</a> </div>
+                <div class="price-btm"> <a href="#">Enquire about this Plan</a> </div>
               </div>
             </div>
           </div>
